--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "@supabase/supabase-js": "^2.43.0",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.1.0",
     "next-intl": "^3.15.0",
     "zod": "^3.23.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "axios": "^1.7.0",
     "date-fns": "^3.6.0"
   },
